objects/TracRTC__Flow__c.object
<CustomObject>
    <fields>
        <fullName>TracRTC__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracRTC__First_Step__c</fullName>
        <label>First Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TracRTC__Flow_Id__c</fullName>
        <label>Flow Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Is_Newly_Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Newly Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Last_Saved_Date__c</fullName>
        <label>Last Saved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Flow</label>
    <nameField>
        <label>Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flows</pluralLabel>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>TracRTC__Flow_Manager__c</fullName>
        <label>Flow Manager</label>
    </sharingReasons>
</CustomObject>